# FastMatrix

./: Cargo.toml  README.md  build.rs
examples/: image_proc.rs  neural_net.rs
src/: lib.rs  main.rs
src/benchmark/: mod.rs  results.rs  suite.rs
src/core/: error.rs  matrix.rs  memory.rs
src/cuda/: wrapper.rs
src/cuda/kernels/: activations.cu  matmul.cu
src/examples/: image_proc.rs  neural_net.rs
